test/conformance/chainsaw/fluxcd/verify-git-repositories/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: verify-git-repositories
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
